# geomfitty

./: .travis.yml  README.md  pyproject.toml  requirements-dev.txt  setup.py
doc/examples/: fit_example.ipynb  plot_o3d.ipynb
geomfitty/: __init__.py  _descriptor.py  _util.py  fit.py  fit3d.py  geom.py  geom3d.py  plot.py  transform.py
tests/: test_descriptor.py  test_fit.py  test_fuzz_fit.py  test_geom.py  test_util.py  util.py
